--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2"
-  }
+  },
+  "proxy": "http://192.168.0.193:8082"
 }
