--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2"
   },
-  "proxy": "https://192.168.0.193:8082"
+  "proxy": "http://192.168.0.193:8082/"
 }
