--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-textarea-autosize": "^8.5.3",
     "redux": "^5.0.1",
     "sass": "^1.69.6"
   },
@@ -55,5 +56,5 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2"
   },
-  "proxy": "http://192.168.0.193:8082/"
+  "proxy": "http://192.168.0.193:8080/"
 }
