--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -57,7 +58,5 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2"
   },
-
   "proxy": "http://112.222.157.156:5221/"
-
 }
