--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-cookie": "^7.0.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.24",
     "react-redux": "^9.1.0",
