--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-textarea-autosize": "^8.5.3",
+    "react-time-picker": "^6.6.0",
     "redux": "^5.0.1",
     "sass": "^1.69.6",
     "swiper": "^11.0.4"
