--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
