feat : 마무리98% 예외처리 완료

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
+// with options
 {
-  "env": {
-    "production": {
-      "plugins": ["transform-remove-console"]
-    }
-  }
+  "plugins": [["transform-remove-console", { "exclude": ["error", "warn"] }]]
 }
