--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-time-picker": "^6.6.0",
     "redux": "^5.0.1",
     "sass": "^1.69.6",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.4",
+    "tw-elements": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
