--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.20.5",
+    "@tanstack/react-query-devtools": "^5.21.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-query": "^1.2.9",
     "axios": "^1.6.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "dayjs": "^1.11.10",
@@ -32,6 +35,7 @@
     "react-spinners": "^0.13.8",
     "react-textarea-autosize": "^8.5.3",
     "react-time-picker": "^6.6.0",
+    "recoil": "^0.7.7",
     "redux": "^5.0.1",
     "sass": "^1.69.6",
     "swiper": "^11.0.4",
