--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
-    "@tanstack/react-query": "^5.20.5",
+    "@tanstack/react-query": "^5.21.7",
     "@tanstack/react-query-devtools": "^5.21.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-cookie": "^7.0.1",
@@ -27,6 +28,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.24",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
