--- a/package.json
+++ b/package.json
@@ -69,9 +69,17 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "style-loader": "^3.3.4",
+    "typescript": "^5.3.3"
   },
   "proxy": "http://112.222.157.156:5221"
 }
