--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "@types/react-query": "^1.2.9",
     "axios": "^1.6.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
