--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
+    "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.4",
     "typescript": "^5.3.3"
   },
