--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-query": "^1.2.9",
     "axios": "^1.6.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
@@ -24,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.0.1",
     "react-datepicker": "^5.0.0",
     "react-daum-postcode": "^3.1.3",
